--- a/src/pipelines/NHTSA_VOQs/notebooks/1.0-Complaints_Extraction.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/1.0-Complaints_Extraction.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import httpx\n",
     "import pandas as pd\n",
+    "import pandera as pa\n",
     "\n",
     "from io import BytesIO\n",
     "from zipfile import ZipFile\n",
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,36 +117,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "schema = pa.DataFrameSchema(\n",
+    "    {\n",
+    "        \"column1\": pa.Column(int, checks=pa.Check.le(10)),\n",
+    "        \"column2\": pa.Column(float, checks=pa.Check.lt(-1.2)),\n",
+    "        \"column3\": pa.Column(\n",
+    "            str,\n",
+    "            checks=[\n",
+    "                pa.Check.str_startswith(\"value_\"),\n",
+    "                # define custom checks as functions that take a series as input and\n",
+    "                # outputs a boolean or boolean Series\n",
+    "                pa.Check(lambda s: s.str.split(\"_\", expand=True).shape[1] == 2),\n",
+    "            ],\n",
+    "        ),\n",
+    "    }\n",
+    ")\n",
+    "\n",
     "dataset = pd.DataFrame()\n",
     "\n",
+    "\n",
     "if data_list[0][\"updated_date\"] < datetime.now():\n",
+    "\n",
     "    resp = httpx.get(data_list[0][\"url\"], timeout=160).content\n",
     "\n",
+    "\n",
     "    with ZipFile(BytesIO(resp)) as myzip:\n",
+    "\n",
     "        dataset = pd.read_csv(\n",
+    "\n",
     "            myzip.open(\"COMPLAINTS_RECEIVED_2020-2024.txt\"),\n",
+    "\n",
     "            sep=\"\\t\",\n",
+    "\n",
     "            header=None,\n",
     "            names=columns,\n",
-    "        )\n",
-    "\n",
-    "dataset.shape"
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(757, 49)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "today = datetime.today().strftime(\"%Y-%m-%d\")\n",
+    "dataset[\"DATEA\"] = pd.to_datetime(dataset[\"DATEA\"], format=\"%Y%m%d\")\n",
     "\n",
-    "df = dataset[\n",
-    "    (dataset[\"MFR_NAME\"].isin([\"Ford Motor Company\"]) & dataset[\"DATEA\"].gt(20230215))\n",
+    "filtered_df = dataset[\n",
+    "    (dataset[\"MFR_NAME\"] == \"Ford Motor Company\")\n",
+    "    & (pd.to_datetime(dataset[\"DATEA\"], format=\"%Y/%m/%d\") > pd.Timestamp(\"2024-02-01\"))\n",
     "]\n",
-    "df.to_csv(\n",
-    "    f\"../data/raw/NHTSA_COMPLAINTS_{today}.csv\", sep=\";\", encoding=\"utf-8\", index=False\n",
-    ")"
+    "filtered_df.shape"
    ]
   }
  ],
@@ -165,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
