TEST: etl notebooks and test files

--- a/src/pipelines/NHTSA_VOQs/notebooks/2.0_OpenAI_NHTSA.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/2.0_OpenAI_NHTSA.ipynb
@@ -2,15 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "9b0efb9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "from functools import lru_cache"
+    "import time\n",
+    "import logging\n",
+    "from typing import Dict, List\n",
+    "from functools import lru_cache\n",
+    "\n",
+    "import httpx\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -20,17 +24,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "token_endpoint = str(os.getenv('TOKEN_ENDPOINT'))\n",
-    "api_host = str(os.getenv('API_HOST'))\n",
-    "api_endpoint = str(os.getenv('API_ENDPOINT'))\n",
-    "proxy_endpoint = str(os.getenv('FORD_PROXY'))\n",
-    "scope = str(os.getenv('SCOPE'))\n",
-    "client_id = str(os.getenv('CLIENT_ID'))\n",
-    "client_secret = str(os.getenv('CLIENT_SECRET'))\n",
+    "token_endpoint = str(os.getenv(\"TOKEN_ENDPOINT\"))\n",
+    "api_host = str(os.getenv(\"API_HOST\"))\n",
+    "api_endpoint = str(os.getenv(\"API_ENDPOINT\"))\n",
+    "proxy_endpoint = str(os.getenv(\"FORD_PROXY\"))\n",
+    "scope = str(os.getenv(\"SCOPE\"))\n",
+    "client_id = str(os.getenv(\"CLIENT_ID\"))\n",
+    "client_secret = str(os.getenv(\"CLIENT_SECRET\"))\n",
     "\n",
-    "os.environ['HTTP_PROXY'] = proxy_endpoint\n",
-    "os.environ['HTTPS_PROXY'] = proxy_endpoint\n",
-    "os.environ['NO_PROXY'] = api_host"
+    "os.environ[\"HTTP_PROXY\"] = proxy_endpoint\n",
+    "os.environ[\"HTTPS_PROXY\"] = proxy_endpoint\n",
+    "os.environ[\"NO_PROXY\"] = api_host"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9ebedf56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_client() -> httpx.Client:\n",
+    "    \"\"\"\n",
+    "    Creates a common client for future http requests\n",
+    "\n",
+    "    Returns:\n",
+    "        httpx.Client: client with ford proxies\n",
+    "    \"\"\"\n",
+    "    ford_proxy = str(os.getenv(\"FORD_PROXY\"))\n",
+    "    timeout_config = httpx.Timeout(10.0, connect=5.0)\n",
+    "    proxy_mounts = {\n",
+    "        \"http://\": httpx.HTTPTransport(proxy=httpx.Proxy(ford_proxy)),\n",
+    "        \"https://\": httpx.HTTPTransport(proxy=httpx.Proxy(ford_proxy)),\n",
+    "    }\n",
+    "    return httpx.Client(\n",
+    "        timeout=timeout_config,\n",
+    "        mounts=proxy_mounts,\n",
+    "        verify=False,\n",
+    "    )"
    ]
   },
   {
@@ -49,32 +80,40 @@
    ],
    "source": [
     "def get_token():\n",
-    "    response = requests.post(\n",
-    "        token_endpoint, \n",
-    "        data={\n",
-    "            \"client_id\": client_id,\n",
-    "            \"client_secret\": client_secret,\n",
-    "            \"scope\": scope,\n",
-    "            \"grant_type\": \"client_credentials\"\n",
-    "        }\n",
+    "    with create_client() as client:\n",
+    "        response = client.post(\n",
+    "            str(os.getenv(\"TOKEN_ENDPOINT\")),\n",
+    "            data={\n",
+    "                \"client_id\": str(os.getenv(\"CLIENT_ID\")),\n",
+    "                \"client_secret\": str(os.getenv(\"CLIENT_SECRET\")),\n",
+    "                \"scope\": str(os.getenv(\"SCOPE\")),\n",
+    "                \"grant_type\": \"client_credentials\",\n",
+    "            },\n",
+    "            timeout=160,\n",
+    "        )\n",
+    "    print(\n",
+    "        \"token expires in:\",\n",
+    "        round(int(response.json()[\"expires_in\"]) / 60, 0),\n",
+    "        \"minutes\",\n",
     "    )\n",
-    "    print('token expires in:',round(int(response.json()['expires_in']) / 60, 0), 'minutes')\n",
-    "    return response.json()['access_token']\n",
+    "    return response.json()[\"access_token\"]\n",
+    "\n",
     "\n",
     "def load_categories():\n",
     "    categories = []\n",
-    "    with open(\"../data/external/binnings.txt\", encoding=\"utf-8\", mode=\"r\") as file:\n",
+    "    with open(\"./binnings.txt\", encoding=\"utf-8\", mode=\"r\") as file:\n",
     "        for line in file.readlines():\n",
     "            categories.append(line.strip(\"\\n\"))\n",
     "\n",
     "    return frozenset(categories)\n",
+    "\n",
     "\n",
     "token = get_token()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "a5a45978",
    "metadata": {},
    "outputs": [],
@@ -87,7 +126,7 @@
     "        + \"adlight, door handle, door keypad, window, weatherstripping, \"\n",
     "        + \"side mirror, lighting, swing gate, cowl grille, hard top, ski\"\n",
     "        + \"d plate, sheet metal, running boards, water leak, etc)\"\n",
-    "    )    \n",
+    "    )\n",
     "    prompt = (\n",
     "        f\"{complaint}\"\n",
     "        \"Question 1: For this complaint, check if it is related to an ex\"\n",
@@ -108,48 +147,64 @@
     "        + \"e, answer NOT SURE. Answer in the correct order. If you canno\"\n",
     "        + \"t assist, answer 1, and answer 2 must be NA. You should be ob\"\n",
     "        + \"jective and cold. Never change the answer format mentioned.\"\n",
-    "        )\n",
-    "    \n",
-    "    contexto = \"You are a helpful text reader and analyzer. You need to give me 2 answers. \" + prompt\n",
-    "    \n",
-    "    # https://platform.openai.com/docs/guides/prompt-engineering/six-strategies-for-getting-better-results\n",
-    "    response = requests.post(\n",
-    "        api_endpoint,\n",
-    "        headers={\"Authorization\": f\"Bearer {token}\"},\n",
-    "        json={\n",
-    "            \"model\": \"gpt-4\",\n",
-    "            \"context\": contexto, # sets the overall behavior of the assistant.\n",
-    "            \"messages\": \n",
-    "            [{\n",
-    "                \"role\": \"user\",\n",
-    "                \"content\": prompt\n",
-    "            }],\n",
-    "            \"parameters\": \n",
-    "            {\n",
-    "                \"temperature\": 0.05, # Determines the randomnes of the model's response. A value of 0 is mostly deterministic.\n",
-    "                #\"maxOutputTokens\": 65,\n",
-    "            }\n",
-    "        }\n",
     "    )\n",
-    "    return response.json()['content']"
+    "    content = {\n",
+    "        \"model\": \"gpt-4\",\n",
+    "        \"context\": (\n",
+    "            \"You are a helpful text reader and analyzer. You need to give me 2 answers.\"\n",
+    "        ),  # sets the overall behavior of the assistant.\n",
+    "        \"messages\": [{\"role\": \"user\", \"content\": prompt}],\n",
+    "        \"parameters\": {\n",
+    "            \"temperature\": 0.05,  # Determines the randomnes of the model's response.\n",
+    "        },\n",
+    "    }\n",
+    "    with create_client() as client:\n",
+    "        response = client.post(\n",
+    "            api_endpoint,\n",
+    "            headers={\"Authorization\": f\"Bearer {token}\"},\n",
+    "            json=content,\n",
+    "            timeout=360,\n",
+    "        )\n",
+    "    return response.json()[\"content\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "9388f3f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idx, row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(df\u001b[38;5;241m.\u001b[39mitertuples(index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m), start\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m):\n\u001b[0;32m      6\u001b[0m     decription \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(row[\u001b[38;5;241m2\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of year \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(row[\u001b[38;5;241m3\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(row[\u001b[38;5;241m21\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 7\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mcall_api_movement\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtoken\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdecription\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcategories\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m response \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mF8~~~\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m row[\u001b[38;5;241m1\u001b[39m]:\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28mprint\u001b[39m(idx, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOK\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_excel('../data/external/nhtsa_binned_data_test.xlsx')\n",
-    "\n",
     "categories = list(load_categories())\n",
+    "df = pd.read_csv(\"./mock_complaints.csv\")\n",
+    "\n",
+    "\n",
     "\n",
     "for idx, row in enumerate(df.itertuples(index=False), start=2):\n",
-    "    decription = f\"model {str(row[2])} of year {str(row[3])} {str(row[0])}\"\n",
-    "    response = call_api_movement(token, decription, categories) # type: ignore\n",
-    "    if response == 'F8~~~'+row[1]:\n",
-    "        print(idx,\"OK\")\n",
+    "\n",
+    "    decription = f\"model {str(row[2])} of year {str(row[3])} {str(row[21])}\"\n",
+    "\n",
+    "\n",
+    "    response = call_api_movement(token, decription, categories)  # type: ignore\n",
+    "\n",
+    "    if response == \"F8~~~\" + row[1]:\n",
+    "\n",
+    "\n",
+    "        print(idx, \"OK\")\n",
+    "\n",
+    "\n",
     "        continue\n",
     "    print(response)"
    ]
