--- a/src/pipelines/NHTSA_VOQs/notebooks/2.0_OpenAI_NHTSA.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/2.0_OpenAI_NHTSA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "9b0efb9e",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "73d63e11",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
+   "id": "cf3f480a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mileage_class(miles: int) -> str:\n",
+    "    \"\"\"\n",
+    "    Classify the case by miles of the car.\n",
+    "\n",
+    "    Args:\n",
+    "        miles (int): Car miles.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: Car miles classfication.\n",
+    "    \"\"\"\n",
+    "    if miles == 0:\n",
+    "        return \"~\"\n",
+    "    if 0 < miles < 6000:\n",
+    "        return \"< 6k\"\n",
+    "    if 6000 < miles < 12000:\n",
+    "        return \"6K to 12K\"\n",
+    "    if 12000 < miles < 18000:\n",
+    "        return \"12K to 18K\"\n",
+    "    if 18000 < miles < 24000:\n",
+    "        return \"18K to 24K\"\n",
+    "    if 24000 < miles < 30000:\n",
+    "        return \"24K to 30K\"\n",
+    "    return \"> 36K\"\n",
+    "\n",
+    "\n",
+    "def classify_binning(binning: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Transform the binning into the general failure mode.\n",
+    "\n",
+    "    Args:\n",
+    "        binning (str): complaint classification\n",
+    "\n",
+    "    Returns:\n",
+    "        str: failure mode\n",
+    "    \"\"\"\n",
+    "    if \"LOOSE\" in binning:\n",
+    "        return \"LOOSEN\"\n",
+    "    if \"FELL OFF\" in binning:\n",
+    "        return \"FELL OFF\"\n",
+    "    if \"DETACHED\" in binning:\n",
+    "        return \"FELL OFF\"\n",
+    "    if \"MOONROOF GLASS | CRACKED\" in binning:\n",
+    "        return \"Moonroof Glass Cracked/Exploded\"\n",
+    "    if \"MOONROOF GLASS | EXPLODED\" in binning:\n",
+    "        return \"Moonroof Glass Cracked/Exploded\"\n",
+    "    if \"FRONT WIPER | TOTALLY INOPERATIVE\" in binning:\n",
+    "        return \"Front Wiper Not Working\"\n",
+    "    if \"OWD\" in binning:\n",
+    "        return \"Latch OWD\"\n",
+    "    return \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "9ebedf56",
    "metadata": {},
    "outputs": [],
@@ -59,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "3a6db2ba",
    "metadata": {},
    "outputs": [
@@ -74,7 +133,9 @@
    "source": [
     "def get_token():\n",
     "    with create_client() as client:\n",
+    "\n",
     "        response = client.post(\n",
+    "\n",
     "            str(os.getenv(\"TOKEN_ENDPOINT\")),\n",
     "            data={\n",
     "                \"client_id\": str(os.getenv(\"CLIENT_ID\")),\n",
@@ -85,20 +146,28 @@
     "            timeout=160,\n",
     "        )\n",
     "    print(\n",
+    "\n",
     "        \"token expires in:\",\n",
+    "\n",
     "        round(int(response.json()[\"expires_in\"]) / 60, 0),\n",
     "        \"minutes\",\n",
     "    )\n",
+    "\n",
+    "\n",
     "    return response.json()[\"access_token\"]\n",
+    "\n",
     "\n",
     "\n",
     "def load_categories():\n",
     "    categories = []\n",
+    "\n",
+    "\n",
     "    with open(\"./binnings.txt\", encoding=\"utf-8\", mode=\"r\") as file:\n",
     "        for line in file.readlines():\n",
-    "            categories.append(line.strip(\"\\n\"))\n",
+    "            categories.append(line.strip(\"\\n\").split(\",\")[1])\n",
     "\n",
     "    return frozenset(categories)\n",
+    "\n",
     "\n",
     "\n",
     "token = get_token()"
@@ -106,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "a5a45978",
    "metadata": {},
    "outputs": [],
    "source": [
     "@lru_cache(maxsize=70)\n",
-    "def call_api_movement(token, complaint, categories):\n",
+    "def call_api_movement(complaint, token):\n",
     "    parts = (\n",
     "        \"door, window, windshield, wiper, glass, hood, trunk, moonroof, \"\n",
     "        + \"bumper, tail light, pillar, undershield, roof rack, latch, he\"\n",
@@ -120,6 +189,7 @@
     "        + \"side mirror, lighting, swing gate, cowl grille, hard top, ski\"\n",
     "        + \"d plate, sheet metal, running boards, water leak, etc)\"\n",
     "    )\n",
+    "    categories = list(load_categories())\n",
     "    prompt = (\n",
     "        f\"{complaint}\"\n",
     "        \"Question 1: For this complaint, check if it is related to an ex\"\n",
@@ -128,7 +198,7 @@
     "        + \"the problems related to power liftgate electrical problems an\"\n",
     "        + \"d rear view camera are NOT F8. Question 2: For each of these \"\n",
     "        + \"sentences that your answer 1 was 'F8', check if it is related\"\n",
-    "        + f\"to only one of the following categories: {list(categories)}.\"\n",
+    "        + f\"to only one of the following categories: {categories}.\"\n",
     "        + \" You should give only one answer with one answer for Question\"\n",
     "        + \" 1 and one answer for Question 2 in the following format: 'AN\"\n",
     "        + \"SWER 1~~~ANSWER 2'. Note: 'OWD' means 'opened while driving' \"\n",
@@ -151,45 +221,50 @@
     "            \"temperature\": 0.05,  # Determines the randomnes of the model's response.\n",
     "        },\n",
     "    }\n",
-    "    with create_client() as client:\n",
+    "    with httpx.Client() as client:\n",
     "        response = client.post(\n",
     "            api_endpoint,\n",
     "            headers={\"Authorization\": f\"Bearer {token}\"},\n",
     "            json=content,\n",
-    "            timeout=360,\n",
+    "            timeout=8,\n",
     "        )\n",
-    "    return response.json()[\"content\"]"
+    "    message = response.json()[\"content\"]\n",
+    "    print(message)\n",
+    "\n",
+    "    if len(parts := message.split(\"~~~\")) == 2:\n",
+    "        function, result = parts\n",
+    "        if function == \"NOT F8\":\n",
+    "            return [function, \"~\", \"~\"]\n",
+    "        if function == \"F8\":\n",
+    "            if \"|\" not in result:  # case where recalls is being processed\n",
+    "                return [function, \"~\", result]\n",
+    "            component, failure = result.split(\" | \")\n",
+    "            return [function, component, failure]\n",
+    "\n",
+    "    return [\"NOT CLASSIFIED\", \"~\", \"~\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "9388f3f3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idx, row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(df\u001b[38;5;241m.\u001b[39mitertuples(index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m), start\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m):\n\u001b[0;32m      6\u001b[0m     decription \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(row[\u001b[38;5;241m2\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of year \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(row[\u001b[38;5;241m3\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(row[\u001b[38;5;241m21\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 7\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mcall_api_movement\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtoken\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdecription\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcategories\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m response \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mF8~~~\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m row[\u001b[38;5;241m1\u001b[39m]:\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28mprint\u001b[39m(idx, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOK\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "categories = list(load_categories())\n",
     "df = pd.read_csv(\"./mock_complaints.csv\")\n",
+    "vfgs = load_vfgs()\n",
+    "vins = load_full_vins()\n",
     "\n",
-    "for idx, row in enumerate(df.itertuples(index=False), start=2):\n",
-    "    decription = f\"model {str(row[2])} of year {str(row[3])} {str(row[21])}\"\n",
-    "    response = call_api_movement(token, decription, categories)  # type: ignore\n",
-    "    if response == \"F8~~~\" + row[1]:\n",
-    "        print(idx, \"OK\")\n",
-    "        continue\n",
-    "    print(response)"
+    "df[[\"FUNCTION_\", \"COMPONET\", \"FAILURE\"]] = (\n",
+    "    df[\"CDESCR\"]\n",
+    "    .apply(lambda row: call_api_movement(row, token))  # type: ignore\n",
+    "    .to_list()\n",
+    ")\n",
+    "df[\"BINNING\"] = df[\"COMPONET\"] + \" | \" + df[\"FAILURE\"]\n",
+    "df[\"FULL_STATE\"] = df[\"STATE\"].apply(convert_code_into_state)\n",
+    "df[\"FAIL_QUARTER\"] = df[\"FAILDATE\"].apply(get_quarter)\n",
+    "df[\"VFG\"] = df[\"BINNING\"].apply(lambda x: vfgs.get(x, \" ~ \"))\n",
+    "df[\"FULL_VIN\"] = df[\"ODINO\"].apply(lambda x: vins.get(x, \" ~ \"))"
    ]
   }
  ],
@@ -209,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
