TEST: GSAR being decontined, new pipeline

--- a/src/pipelines/NHTSA_VOQs/notebooks/1.1_GSAR_VIN_Extraction.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/1.1_GSAR_VIN_Extraction.ipynb
@@ -14,16 +14,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_request_id = \"c7dbc22d-90f0-4cf3-eb0e-008006080065\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_token():\n",
+    "def get_token(client_request_id: str):\n",
     "    url = \"https://corp.sts.ford.com/adfs/oauth2/authorize/wia\"\n",
     "    params = {\n",
     "        \"client_id\": \"urn:gsar:clientid:web:prod\",\n",
     "        \"response_type\": \"token id_token\",\n",
-    "        \"redirect_uri\": \"https://www.gsar.ford.com/onlinereports/oauth-callback&resource=urn:gsar:resource:web:prod&client-request-id=c7dbc22d-90f0-4cf3-eb0e-008006080065&RedirectToIdentityProvider=AD+AUTHORITY\",\n",
+    "        \"redirect_uri\": f\"https://www.gsar.ford.com/onlinereports/oauth-callback&resource=urn:gsar:resource:web:prod&client-request-id={client_request_id}&RedirectToIdentityProvider=AD+AUTHORITY\",\n",
     "    }\n",
     "    response = httpx.get(url, params=params)\n",
     "    print(response)\n",
@@ -116,7 +125,6 @@
     "    \"1FMCU9J97LUA24971\",\n",
     "    \"1FMCU9G69LUA96266\",\n",
     "]\n",
-    "\n",
     "\n",
     "\n",
     "data = [get_info_by_vin(vin, token) for vin in vins]"
