TEST: pipeline done

--- a/src/pipelines/GRID/notebooks/1.0_Collect_Last_Update.ipynb
+++ b/src/pipelines/GRID/notebooks/1.0_Collect_Last_Update.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,10 +44,18 @@
     "                new_issues.append(\n",
     "                    row[\n",
     "                        [\n",
+    "                            \"Function\",\n",
     "                            \"Issue #\",\n",
     "                            \"Issue Title\",\n",
     "                            \"Description\",\n",
     "                            \"Affected Vehicles\",\n",
+    "                            \"Days Open in CCRG\",\n",
+    "                            \"Days Open in CSF\",\n",
+    "                            \"Days Open in GOV\",\n",
+    "                            \"Days Open in EPRC\",\n",
+    "                            \"Field Service Action #\",\n",
+    "                            \"Overall Status\",\n",
+    "                            \"GRID creation date\",\n",
     "                        ]\n",
     "                    ].to_dict()\n",
     "                )\n",
@@ -59,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,35 +79,101 @@
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Function</th>\n",
+       "      <th>Issue #</th>\n",
+       "      <th>Issue Title</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Affected Vehicles</th>\n",
+       "      <th>Days Open in CCRG</th>\n",
+       "      <th>Days Open in CSF</th>\n",
+       "      <th>Days Open in GOV</th>\n",
+       "      <th>Days Open in EPRC</th>\n",
+       "      <th>Field Service Action #</th>\n",
+       "      <th>Overall Status</th>\n",
+       "      <th>GRID creation date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>F8</td>\n",
+       "      <td>24-141</td>\n",
+       "      <td>Glass Improper Adhesion - Heritage Series Rear...</td>\n",
+       "      <td>The 5 Door Bronco Heritage for rear quarter gl...</td>\n",
+       "      <td>2024 U725N BRONCO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Active CCRG</td>\n",
+       "      <td>2024-02-20 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>F8</td>\n",
+       "      <td>24-124</td>\n",
+       "      <td>Nautilus Moisture in Tail &amp; Stop &amp; Turn Lamp</td>\n",
+       "      <td>SSM requested for body mounted and deck lamp m...</td>\n",
+       "      <td>2024 CDX707A NAUTILUS</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Active CCRG</td>\n",
+       "      <td>2024-02-13 00:00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[{'Issue #': '24-141',\n",
-       "  'Issue Title': 'Glass Improper Adhesion - Heritage Series Rear Quarter Glass',\n",
-       "  'Description': 'The 5 Door Bronco Heritage for rear quarter glass adhesion issue. There are 4 claims so far with the glass peeling/ hanging off due to this. The suspected root cause is that Vitro used the wrong adhesive mixture. \\n',\n",
-       "  'Affected Vehicles': '2024 U725N BRONCO'},\n",
-       " {'Issue #': '24-124',\n",
-       "  'Issue Title': 'Nautilus Moisture in Tail & Stop & Turn Lamp',\n",
-       "  'Description': 'SSM requested for body mounted and deck lamp moisture.',\n",
-       "  'Affected Vehicles': '2024 CDX707A NAUTILUS'}]"
+       "  Function Issue #                                        Issue Title  \\\n",
+       "0       F8  24-141  Glass Improper Adhesion - Heritage Series Rear...   \n",
+       "1       F8  24-124       Nautilus Moisture in Tail & Stop & Turn Lamp   \n",
+       "\n",
+       "                                         Description      Affected Vehicles  \\\n",
+       "0  The 5 Door Bronco Heritage for rear quarter gl...      2024 U725N BRONCO   \n",
+       "1  SSM requested for body mounted and deck lamp m...  2024 CDX707A NAUTILUS   \n",
+       "\n",
+       "  Days Open in CCRG  Days Open in CSF  Days Open in GOV  Days Open in EPRC  \\\n",
+       "0                 0               NaN               NaN                NaN   \n",
+       "1                 8               NaN               NaN                NaN   \n",
+       "\n",
+       "   Field Service Action # Overall Status   GRID creation date  \n",
+       "0                     NaN    Active CCRG  2024-02-20 00:00:00  \n",
+       "1                     NaN    Active CCRG  2024-02-13 00:00:00  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "verify_new_issues(data.reset_index())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_data = pd.read_excel(\n",
-    "    \"../../../../data/external/GRID_Data.xlsm\", sheet_name=\"Map\", dtype=str\n",
-    ")"
+    "data = pd.DataFrame(verify_new_issues(data.reset_index()))\n",
+    "data.to_csv(\"extracted.csv\")\n",
+    "data.head()"
    ]
   }
  ],
