--- a/src/pipelines/NHTSA_VOQs/notebooks/2.0_OpenAI_NHTSA.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/2.0_OpenAI_NHTSA.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "9b0efb9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import asyncio\n",
+    "\n",
+    "\n",
+    "\n",
     "from functools import lru_cache\n",
     "\n",
+    "\n",
     "import httpx\n",
+    "\n",
+    "\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "73d63e11",
    "metadata": {},
    "outputs": [],
@@ -32,25 +39,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "9ebedf56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_client() -> httpx.Client:\n",
+    "def create_client() -> httpx.AsyncClient:\n",
     "    \"\"\"\n",
     "    Creates a common client for future http requests\n",
     "\n",
     "    Returns:\n",
     "        httpx.Client: client with ford proxies\n",
     "    \"\"\"\n",
+    "    limits = httpx.Limits(max_connections=8)  # testing with 8, default 4\n",
     "    ford_proxy = str(os.getenv(\"FORD_PROXY\"))\n",
-    "    timeout_config = httpx.Timeout(10.0, connect=5.0)\n",
+    "    timeout_config = httpx.Timeout(10.0, connect=5.0, pool=4.0)\n",
     "    proxy_mounts = {\n",
-    "        \"http://\": httpx.HTTPTransport(proxy=httpx.Proxy(ford_proxy)),\n",
-    "        \"https://\": httpx.HTTPTransport(proxy=httpx.Proxy(ford_proxy)),\n",
+    "        \"http://\": httpx.AsyncHTTPTransport(\n",
+    "            proxy=httpx.Proxy(ford_proxy), limits=limits, retries=3\n",
+    "        ),\n",
+    "        \"https://\": httpx.AsyncHTTPTransport(\n",
+    "            proxy=httpx.Proxy(ford_proxy), limits=limits, retries=3\n",
+    "        ),\n",
     "    }\n",
-    "    return httpx.Client(\n",
+    "    return httpx.AsyncClient(\n",
     "        timeout=timeout_config,\n",
     "        mounts=proxy_mounts,\n",
     "        verify=False,\n",
@@ -59,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "3a6db2ba",
    "metadata": {},
    "outputs": [
@@ -73,9 +85,14 @@
    ],
    "source": [
     "def get_token():\n",
-    "    with create_client() as client:\n",
-    "\n",
+    "    with httpx.Client(\n",
+    "        proxies={\n",
+    "            \"http://\": str(os.getenv(\"FORD_PROXY\")),\n",
+    "            \"https://\": str(os.getenv(\"FORD_PROXY\")),\n",
+    "        }\n",
+    "    ) as client:\n",
     "        response = client.post(\n",
+    "\n",
     "            str(os.getenv(\"TOKEN_ENDPOINT\")),\n",
     "            data={\n",
     "                \"client_id\": str(os.getenv(\"CLIENT_ID\")),\n",
@@ -88,6 +105,7 @@
     "    print(\n",
     "\n",
     "        \"token expires in:\",\n",
+    "\n",
     "        round(int(response.json()[\"expires_in\"]) / 60, 0),\n",
     "        \"minutes\",\n",
     "    )\n",
@@ -96,16 +114,16 @@
     "    return response.json()[\"access_token\"]\n",
     "\n",
     "\n",
-    "\n",
     "def load_categories():\n",
     "    categories = []\n",
     "\n",
-    "    with open(\"./binnings.txt\", encoding=\"utf-8\", mode=\"r\") as file:\n",
+    "    with open(\n",
+    "        \"../../../../data/external/binnings.txt\", encoding=\"utf-8\", mode=\"r\"\n",
+    "    ) as file:\n",
     "        for line in file.readlines():\n",
+    "\n",
     "            categories.append(line.strip(\"\\n\").split(\",\")[1])\n",
-    "\n",
     "    return frozenset(categories)\n",
-    "\n",
     "\n",
     "\n",
     "token = get_token()"
@@ -119,7 +137,9 @@
    "outputs": [],
    "source": [
     "@lru_cache(maxsize=70)\n",
-    "def call_api_movement(complaint, token):\n",
+    "async def call_api_movement(\n",
+    "    complaint: str, client: httpx.AsyncClient, token: str, semaphore: asyncio.Semaphore\n",
+    "):\n",
     "    parts = (\n",
     "        \"door, window, windshield, wiper, glass, hood, trunk, moonroof, \"\n",
     "        + \"bumper, tail light, pillar, undershield, roof rack, latch, he\"\n",
@@ -159,8 +179,8 @@
     "            \"temperature\": 0.05,  # Determines the randomnes of the model's response.\n",
     "        },\n",
     "    }\n",
-    "    with httpx.Client() as client:\n",
-    "        response = client.post(\n",
+    "    async with semaphore:\n",
+    "        response = await client.post(\n",
     "            api_endpoint,\n",
     "            headers={\"Authorization\": f\"Bearer {token}\"},\n",
     "            json=content,\n",
@@ -189,21 +209,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./mock_complaints.csv\")\n",
-    "vfgs = load_vfgs()\n",
-    "vins = load_full_vins()\n",
+    "df = pd.read_csv(\"../../../../data/raw/mock_dataset.csv\")\n",
+    "semaphore = asyncio.Semaphore(70)\n",
+    "\n",
+    "async with create_client() as client:\n",
     "\n",
     "\n",
-    "df[[\"FUNCTION_\", \"COMPONET\", \"FAILURE\"]] = (\n",
-    "    df[\"CDESCR\"]\n",
-    "    .apply(lambda row: call_api_movement(row, token))  # type: ignore\n",
-    "    .to_list()\n",
-    ")\n",
-    "df[\"BINNING\"] = df[\"COMPONET\"] + \" | \" + df[\"FAILURE\"]\n",
-    "df[\"FULL_STATE\"] = df[\"STATE\"].apply(convert_code_into_state)\n",
-    "df[\"FAIL_QUARTER\"] = df[\"FAILDATE\"].apply(get_quarter)\n",
-    "df[\"VFG\"] = df[\"BINNING\"].apply(lambda x: vfgs.get(x, \" ~ \"))\n",
-    "df[\"FULL_VIN\"] = df[\"ODINO\"].apply(lambda x: vins.get(x, \" ~ \"))"
+    "    df[[\"FUNCTION_\", \"COMPONET\", \"FAILURE\"]] = await asyncio.gather(\n",
+    "        *(call_api_movement(vin, client, token, semaphore) for vin in df[\"CDESCR\"])\n",
+    "    )\n",
+    "df.head()"
    ]
   }
  ],
