TEST: new tests

--- a/src/pipelines/NHTSA_VOQs/notebooks/1.1_GSAR_VIN_Extraction.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/1.1_GSAR_VIN_Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,36 @@
     "\n",
     "# MADE BY VICTOR DUARTE. VDUART10\n",
     "base_url = \"https://www.gsar.ford.com/onlinereports/be/getVehInfoFull\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [401 Unauthorized]>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "URL = \"https://corp.sts.ford.com/adfs/oauth2/authorize/wia\"\n",
+    "params = {\n",
+    "    \"client_id\": \"urn:gsar:clientid:web:prod\",\n",
+    "    \"response_type\": \"token id_token\",\n",
+    "    \"redirect_uri\": \"https://www.gsar.ford.com/oauth-callback/\",\n",
+    "    \"resource\": \"urn:gsar:resource:web:prod\",\n",
+    "    \"client-request-id\": \"c79b8f43-a1cb-472c-1627-0080030000ca\",\n",
+    "    \"RedirectToIdentityProvider\": \"AD AUTHORITY\",\n",
+    "}\n",
+    "response = httpx.get(URL, params=params)\n",
+    "response"
    ]
   },
   {
@@ -28,7 +58,7 @@
     "    Returns:\n",
     "        httpx.Client: client with ford proxies\n",
     "    \"\"\"\n",
-    "    limits = httpx.Limits(max_connections=8)  # testing with 8, default 4\n",
+    "    limits = httpx.Limits(max_connections=8)\n",
     "    ford_proxy = str(os.getenv(\"FORD_PROXY\"))\n",
     "    timeout_config = httpx.Timeout(10.0, connect=5.0, pool=4.0)\n",
     "    proxy_mounts = {\n",
