--- a/src/pipelines/NHTSA_VOQs/notebooks/1.0_ComplaintsExtraction.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/1.0_ComplaintsExtraction.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,14 +97,14 @@
     "    }\n",
     "    return httpx.Client(\n",
     "        timeout=timeout_config,\n",
-    "        # mounts=proxy_mounts,\n",
+    "        mounts=proxy_mounts,\n",
     "        verify=False,\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,224 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\VDUART10\\AppData\\Local\\Temp\\ipykernel_17056\\2076063181.py:10: DtypeWarning: Columns (28,30,33,38,41,44) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  dataset = pd.read_csv(file, sep=\"\\t\", header=None, names=columns)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CMPLID</th>\n",
-       "      <th>ODINO</th>\n",
-       "      <th>MFR_NAME</th>\n",
-       "      <th>MAKETXT</th>\n",
-       "      <th>MODELTXT</th>\n",
-       "      <th>YEARTXT</th>\n",
-       "      <th>CRASH</th>\n",
-       "      <th>FAILDATE</th>\n",
-       "      <th>FIRE</th>\n",
-       "      <th>INJURED</th>\n",
-       "      <th>...</th>\n",
-       "      <th>RESTRAINT_TYPE</th>\n",
-       "      <th>DEALER_NAME</th>\n",
-       "      <th>DEALER_TEL</th>\n",
-       "      <th>DEALER_CITY</th>\n",
-       "      <th>DEALER_STATE</th>\n",
-       "      <th>DEALER_ZIP</th>\n",
-       "      <th>PROD_TYPE</th>\n",
-       "      <th>REPAIRED_YN</th>\n",
-       "      <th>MEDICAL_ATTN</th>\n",
-       "      <th>VEHICLES_TOWED_YN</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1633294</td>\n",
-       "      <td>11292384</td>\n",
-       "      <td>Honda (American Honda Motor Co.)</td>\n",
-       "      <td>HONDA</td>\n",
-       "      <td>ACCORD</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>20191221</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1633295</td>\n",
-       "      <td>11292384</td>\n",
-       "      <td>Honda (American Honda Motor Co.)</td>\n",
-       "      <td>HONDA</td>\n",
-       "      <td>ACCORD</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>20191221</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1633296</td>\n",
-       "      <td>11292384</td>\n",
-       "      <td>Honda (American Honda Motor Co.)</td>\n",
-       "      <td>HONDA</td>\n",
-       "      <td>ACCORD</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>20191221</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1633297</td>\n",
-       "      <td>11292385</td>\n",
-       "      <td>Ford Motor Company</td>\n",
-       "      <td>FORD</td>\n",
-       "      <td>EXPLORER</td>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>20191226</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1633298</td>\n",
-       "      <td>11292386</td>\n",
-       "      <td>General Motors, LLC</td>\n",
-       "      <td>CHEVROLET</td>\n",
-       "      <td>VOLT</td>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>20190712</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 49 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    CMPLID     ODINO                          MFR_NAME    MAKETXT  MODELTXT  \\\n",
-       "0  1633294  11292384  Honda (American Honda Motor Co.)      HONDA    ACCORD   \n",
-       "1  1633295  11292384  Honda (American Honda Motor Co.)      HONDA    ACCORD   \n",
-       "2  1633296  11292384  Honda (American Honda Motor Co.)      HONDA    ACCORD   \n",
-       "3  1633297  11292385                Ford Motor Company       FORD  EXPLORER   \n",
-       "4  1633298  11292386               General Motors, LLC  CHEVROLET      VOLT   \n",
-       "\n",
-       "   YEARTXT CRASH  FAILDATE FIRE  INJURED  ...  RESTRAINT_TYPE DEALER_NAME  \\\n",
-       "0   2018.0     N  20191221    N        0  ...             NaN         NaN   \n",
-       "1   2018.0     N  20191221    N        0  ...             NaN         NaN   \n",
-       "2   2018.0     N  20191221    N        0  ...             NaN         NaN   \n",
-       "3   2020.0     N  20191226    N        0  ...             NaN         NaN   \n",
-       "4   2017.0     N  20190712    N        0  ...             NaN         NaN   \n",
-       "\n",
-       "  DEALER_TEL DEALER_CITY DEALER_STATE  DEALER_ZIP  PROD_TYPE  REPAIRED_YN  \\\n",
-       "0        NaN         NaN          NaN         NaN          V          NaN   \n",
-       "1        NaN         NaN          NaN         NaN          V          NaN   \n",
-       "2        NaN         NaN          NaN         NaN          V          NaN   \n",
-       "3        NaN         NaN          NaN         NaN          V          NaN   \n",
-       "4        NaN         NaN          NaN         NaN          V          NaN   \n",
-       "\n",
-       "   MEDICAL_ATTN VEHICLES_TOWED_YN  \n",
-       "0             N                 N  \n",
-       "1             N                 N  \n",
-       "2             N                 N  \n",
-       "3             N                 N  \n",
-       "4             N                 N  \n",
-       "\n",
-       "[5 rows x 49 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = mount_dataset_from_content()\n",
     "df.head()  # out of VPN: 23.7s"
@@ -349,228 +134,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CMPLID</th>\n",
-       "      <th>ODINO</th>\n",
-       "      <th>MFR_NAME</th>\n",
-       "      <th>MAKETXT</th>\n",
-       "      <th>MODELTXT</th>\n",
-       "      <th>YEARTXT</th>\n",
-       "      <th>CRASH</th>\n",
-       "      <th>FAILDATE</th>\n",
-       "      <th>FIRE</th>\n",
-       "      <th>INJURED</th>\n",
-       "      <th>...</th>\n",
-       "      <th>RESTRAINT_TYPE</th>\n",
-       "      <th>DEALER_NAME</th>\n",
-       "      <th>DEALER_TEL</th>\n",
-       "      <th>DEALER_CITY</th>\n",
-       "      <th>DEALER_STATE</th>\n",
-       "      <th>DEALER_ZIP</th>\n",
-       "      <th>PROD_TYPE</th>\n",
-       "      <th>REPAIRED_YN</th>\n",
-       "      <th>MEDICAL_ATTN</th>\n",
-       "      <th>VEHICLES_TOWED_YN</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>332878</th>\n",
-       "      <td>1966250</td>\n",
-       "      <td>11571618</td>\n",
-       "      <td>Ford Motor Company</td>\n",
-       "      <td>LINCOLN</td>\n",
-       "      <td>CORSAIR</td>\n",
-       "      <td>2021.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>20240213</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>332883</th>\n",
-       "      <td>1966255</td>\n",
-       "      <td>11571621</td>\n",
-       "      <td>Ford Motor Company</td>\n",
-       "      <td>FORD</td>\n",
-       "      <td>EXPEDITION</td>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>20240213</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>332886</th>\n",
-       "      <td>1966258</td>\n",
-       "      <td>11571624</td>\n",
-       "      <td>Ford Motor Company</td>\n",
-       "      <td>FORD</td>\n",
-       "      <td>FUSION</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>20231116</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>332890</th>\n",
-       "      <td>1966262</td>\n",
-       "      <td>11571627</td>\n",
-       "      <td>Ford Motor Company</td>\n",
-       "      <td>FORD</td>\n",
-       "      <td>F-350</td>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>20240212</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>332893</th>\n",
-       "      <td>1966265</td>\n",
-       "      <td>11571629</td>\n",
-       "      <td>Ford Motor Company</td>\n",
-       "      <td>FORD</td>\n",
-       "      <td>FOCUS</td>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>20240202</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 49 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "         CMPLID     ODINO            MFR_NAME  MAKETXT    MODELTXT  YEARTXT  \\\n",
-       "332878  1966250  11571618  Ford Motor Company  LINCOLN     CORSAIR   2021.0   \n",
-       "332883  1966255  11571621  Ford Motor Company     FORD  EXPEDITION   2020.0   \n",
-       "332886  1966258  11571624  Ford Motor Company     FORD      FUSION   2018.0   \n",
-       "332890  1966262  11571627  Ford Motor Company     FORD       F-350   2020.0   \n",
-       "332893  1966265  11571629  Ford Motor Company     FORD       FOCUS   2017.0   \n",
-       "\n",
-       "       CRASH  FAILDATE FIRE  INJURED  ...  RESTRAINT_TYPE DEALER_NAME  \\\n",
-       "332878     N  20240213    N        0  ...             NaN         NaN   \n",
-       "332883     N  20240213    N        0  ...             NaN         NaN   \n",
-       "332886     N  20231116    N        0  ...             NaN         NaN   \n",
-       "332890     N  20240212    N        0  ...             NaN         NaN   \n",
-       "332893     N  20240202    N        0  ...             NaN         NaN   \n",
-       "\n",
-       "       DEALER_TEL DEALER_CITY DEALER_STATE  DEALER_ZIP  PROD_TYPE  \\\n",
-       "332878        NaN         NaN          NaN         NaN          V   \n",
-       "332883        NaN         NaN          NaN         NaN          V   \n",
-       "332886        NaN         NaN          NaN         NaN          V   \n",
-       "332890        NaN         NaN          NaN         NaN          V   \n",
-       "332893        NaN         NaN          NaN         NaN          V   \n",
-       "\n",
-       "        REPAIRED_YN  MEDICAL_ATTN VEHICLES_TOWED_YN  \n",
-       "332878          NaN             N                 N  \n",
-       "332883          NaN             N                 N  \n",
-       "332886          NaN             N                 N  \n",
-       "332890          NaN             N                 N  \n",
-       "332893          NaN             N                 N  \n",
-       "\n",
-       "[5 rows x 49 columns]"
+       "(1293, 49)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.drop_duplicates(subset=[\"ODINO\"], inplace=True)\n",
-    "data = df[\n",
-    "    (df[\"MFR_NAME\"] == \"Ford Motor Company\")\n",
-    "    & (df[\"ODINO\"] > int(str(os.getenv(\"LAST_ODINO_CAPTURED\"))))\n",
-    "]\n",
-    "data.head()"
+    "data = df[df[\"ODINO\"] > 11572825]\n",
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
