TEST: async processing

--- a/src/pipelines/NHTSA_VOQs/notebooks/1.1_GSAR_VIN_Extraction.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/1.1_GSAR_VIN_Extraction.ipynb
@@ -59,14 +59,12 @@
     "        httpx.Client: client with ford proxies\n",
     "    \"\"\"\n",
     "    limits = httpx.Limits(max_connections=8)\n",
-    "    ford_proxy = str(os.getenv(\"FORD_PROXY\"))\n",
+    "    ford_proxy = httpx.Proxy(str(os.getenv(\"FORD_PROXY\")))\n",
     "    timeout_config = httpx.Timeout(10.0, connect=5.0, pool=4.0)\n",
     "    proxy_mounts = {\n",
-    "        \"http://\": httpx.AsyncHTTPTransport(\n",
-    "            proxy=httpx.Proxy(ford_proxy), limits=limits, retries=3\n",
-    "        ),\n",
+    "        \"http://\": httpx.AsyncHTTPTransport(proxy=ford_proxy, limits=limits, retries=3),\n",
     "        \"https://\": httpx.AsyncHTTPTransport(\n",
-    "            proxy=httpx.Proxy(ford_proxy), limits=limits, retries=3\n",
+    "            proxy=ford_proxy, limits=limits, retries=3\n",
     "        ),\n",
     "    }\n",
     "    return httpx.AsyncClient(\n",
