--- a/src/pipelines/NHTSA_VOQs/notebooks/3.0_Load_Analysis.ipynb
+++ b/src/pipelines/NHTSA_VOQs/notebooks/3.0_Load_Analysis.ipynb
@@ -2,149 +2,100 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from datetime import date"
+    "\n",
+    "pd.set_option(\"display.max_columns\", None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_new_models():\n",
+    "    return {\n",
+    "        \"ESCAPE HYBRID\": \"ESCAPE\",\n",
+    "        \"C-MAX HYBRID\": \"C-MAX\",\n",
+    "        \"MILAN HYBRID\": \"MILAN\",\n",
+    "        \"EXPLORER SPORT\": \"EXPLORER\",\n",
+    "        \"EXPLORER SPORT TRAC\": \"EXPLORER\",\n",
+    "        \"FUSION ENERGI\": \"FUSION\",\n",
+    "        \"C-MAX ENERGI\": \"C-MAX\",\n",
+    "        \"F-250\": \"SUPERDUTY\",\n",
+    "        \"F-350\": \"SUPERDUTY\",\n",
+    "        \"F-350 SD\": \"SUPERDUTY\",\n",
+    "        \"F-450\": \"SUPERDUTY\",\n",
+    "        \"F-450 SD\": \"SUPERDUTY\",\n",
+    "        \"F-550\": \"SUPERDUTY\",\n",
+    "        \"F-550 SD\": \"SUPERDUTY\",\n",
+    "        \"SUPERDUTY SD\": \"SUPERDUTY\",\n",
+    "        \"F53\": \"F-53\",\n",
+    "        \"CORSAIR\": \"CORSAIR / MKC\",\n",
+    "        \"MKC\": \"CORSAIR / MKC\",\n",
+    "        \"ZEPHYR\": \"ZEPHYR / MKZ\",\n",
+    "        \"MKZ\": \"ZEPHYR / MKZ\",\n",
+    "        \"NAUTILUS\": \"NAUTILUS / MKX\",\n",
+    "        \"MKX\": \"NAUTILUS / MKX\",\n",
+    "        \"AVIATOR\": \"AVIATOR / MKT\",\n",
+    "        \"MKT\": \"AVIATOR / MKT\",\n",
+    "        \"CONTINENTAL\": \"CONTINENTAL / MKS\",\n",
+    "        \"MKS\": \"CONTINENTAL / MKS\",\n",
+    "        \"E-150\": \"E-SERIES\",\n",
+    "        \"E-250\": \"E-SERIES\",\n",
+    "        \"E-350\": \"E-SERIES\",\n",
+    "        \"E-450\": \"E-SERIES\",\n",
+    "        # Include the replacements to correct potential duplicated replacements\n",
+    "        \"CORSAIR / CORSAIR / MKC\": \"CORSAIR / MKC\",\n",
+    "        \"ZEPHYR / ZEPHYR / MKZ\": \"ZEPHYR / MKZ\",\n",
+    "        \"NAUTILUS / NAUTILUS / MKX\": \"NAUTILUS / MKX\",\n",
+    "        \"AVIATOR / AVIATOR / MKT\": \"AVIATOR / MKT\",\n",
+    "        \"CONTINENTAL / CONTINENTAL / MKS\": \"CONTINENTAL / MKS\",\n",
+    "        \"EXPLORER TRAC\": \"EXPLORER\",\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ODINO', 'MFR_NAME', 'MAKETXT', 'MODELTXT', 'YEARTXT', 'CRASH',\n",
-       "       'FAILDATE', 'FIRE', 'INJURED', 'DEATHS', 'COMPDESC', 'CITY', 'STATE',\n",
-       "       'VIN', 'DATEA', 'LDATE', 'MILES', 'OCCURENCES', 'CDESCR', 'CMPL_TYPE',\n",
-       "       'POLICE_RPT_YN', 'PURCH_DT', 'ORIG_OWER_YN', 'ANTI_BRAKES_YN',\n",
-       "       'CRUISE_CONT_YN', 'NUM_CYLS', 'DRIVE_TRAIN', 'FUEL_SYS', 'FUEL_TYPE',\n",
-       "       'TRASN_TYPE', 'VEH_SPEED', 'DOT', 'TIRE_SIZE', 'LOC_OF_TIRE',\n",
-       "       'TIRE_FAIL_TYPE', 'ORIG_EQUIP_YN', 'MANUF_DT', 'SEAT_TYPE',\n",
-       "       'RESTRAINT_TYPE', 'DEALER_NAME', 'DEALER_TEL', 'DEALER_CITY',\n",
-       "       'DEALER_STATE', 'DEALER_ZIP', 'PROD_TYPE', 'REPAIRED_YN',\n",
-       "       'MEDICAL_ATTN', 'VEHICLES_TOWED_YN', 'FULL_STATE', 'FAIL_QUARTER',\n",
-       "       'FULL_VIN', 'FUNCTION_', 'COMPONET', 'FAILURE', 'BINNING', 'VFG',\n",
-       "       'FAILURE_MODE', 'PROD_DATE', 'VEHICLE_LINE_WERS', 'VEHICLE_LINE_GSAR',\n",
-       "       'VEHICLE_LINE_GLOBAL', 'ASSEMBLY_PLANT', 'WARRANTY_START_DATE',\n",
-       "       'REPAIR_DATE_1', 'REPAIR_DATE_2', 'To_be_Binned', 'NewOld',\n",
-       "       'New_Failure_Mode', 'MILEAGE_CLASS', 'EXTRACTED_DATE'],\n",
-       "      dtype='object')"
+       "0        2024 U725N BRONCO\n",
+       "1    2024 CDX707A NAUTILUS\n",
+       "Name: MODELTXT, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\n",
+    "data = pd.read_csv(\n",
     "    \"../../../../data/processed/NHTSA_COMPLAINTS_PROCESSED_2024-02-27.csv\", index_col=0\n",
     ")\n",
-    "df.columns"
+    "grid = pd.read_csv(\"../../../../data/processed/GRID_PROCESSED_2024-02-27.csv\")\n",
+    "grid.rename(\n",
+    "    columns={\"Affected Vehicles\": \"MODELTXT\", \"Binning\": \"BINNING\"}, inplace=True\n",
+    ")\n",
+    "grid[\"MODELTXT\"].replace(load_new_models())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "VEHICLE_LINE_WERS\n",
-       "11-FEB-2019    2\n",
-       "22-OCT-2020    1\n",
-       "07-JUL-2021    1\n",
-       "31-OCT-2020    1\n",
-       "30-SEP-2020    1\n",
-       "20-FEB-2020    1\n",
-       "09-JAN-2021    1\n",
-       "03-MAR-2021    1\n",
-       "19-MAR-2022    1\n",
-       "19-AUG-2020    1\n",
-       "04-JAN-2021    1\n",
-       "15-SEP-2020    1\n",
-       "08-DEC-2020    1\n",
-       "11-JAN-2020    1\n",
-       "18-NOV-2019    1\n",
-       "05-AUG-2011    1\n",
-       "25-MAR-2015    1\n",
-       "02-APR-2021    1\n",
-       "07-MAR-2020    1\n",
-       "16-JUL-2020    1\n",
-       "06-JUL-2016    1\n",
-       "15-APR-2021    1\n",
-       "03-MAR-2019    1\n",
-       "22-NOV-2019    1\n",
-       "18-DEC-2019    1\n",
-       "16-FEB-2012    1\n",
-       "15-OCT-2020    1\n",
-       "23-NOV-2012    1\n",
-       "08-SEP-2011    1\n",
-       "29-NOV-2018    1\n",
-       "30-APR-2021    1\n",
-       "02-JUN-2021    1\n",
-       "29-SEP-2022    1\n",
-       "03-JUL-2014    1\n",
-       "25-MAR-2020    1\n",
-       "31-OCT-2019    1\n",
-       "04-JAN-2020    1\n",
-       "05-FEB-2021    1\n",
-       "15-AUG-2020    1\n",
-       "26-MAR-2021    1\n",
-       "25-APR-2020    1\n",
-       "15-FEB-2018    1\n",
-       "04-DEC-2020    1\n",
-       "24-MAR-2021    1\n",
-       "19-APR-2017    1\n",
-       "19-FEB-2015    1\n",
-       "14-MAR-2020    1\n",
-       "10-DEC-2016    1\n",
-       "08-FEB-2020    1\n",
-       "30-NOV-2021    1\n",
-       "23-MAR-2016    1\n",
-       "02-JUN-2017    1\n",
-       "05-MAY-2020    1\n",
-       "12-MAY-2020    1\n",
-       "13-JUN-2012    1\n",
-       "10-JUN-2021    1\n",
-       "20-MAR-2020    1\n",
-       "28-FEB-2015    1\n",
-       "17-APR-2020    1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"VEHICLE_LINE_WERS\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"VEHICLE_LINE_GSAR\"] = pd.to_datetime(df[\"VEHICLE_LINE_GSAR\"], format=\"%d-%b-%Y\")\n",
-    "df[\"VEHICLE_LINE_GSAR\"] = pd.to_datetime(df[\"VEHICLE_LINE_GSAR\"], format=\"%d-%m-%Y\")\n",
-    "df[\"VEHICLE_LINE_GSAR\"].to_clipboard(index=False)"
+    "merged_df = pd.merge(data, grid, on=[\"MODELTXT\", \"BINNING\"], how=\"left\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
